[package]
name = "passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.30"
chrono = "0.4.38"
fs_extra = "1.3.0"
openssl = "0.10.60"
tempfile = "3.8.0"
wallet-pass = "0.3.0"
