[package]
name = "passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
chrono = "0.4.41"
wallet-pass = "0.5.0"
